force-app/main/default/objects/CQ_SD_SQX_Manager__c/CQ_SD_SQX_Manager__c.object-meta.xml
<CustomObject>
    <description>This Object Contains the Record of Manages</description>
    <label>Manager</label>
    <nameField>
        <label>CQ SD SQX  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>