force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Department__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Department__c</fullName>
    <description>This Field Represent The Department of Managers</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration Manager</fullName>
            </value>
            <value>
                <fullName>UI/UX Manager</fullName>
            </value>
            <value>
                <fullName>Development Manager</fullName>
            </value>
            <value>
                <fullName>CR Manager</fullName>
            </value>
            <value>
                <fullName>HR Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>