force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Job_Description__c</fullName>
    <description>This Field Contains the Job Description for the Manager Role</description>
    <label>Job Description</label>
    <type>TextArea</type>
</CustomField>