force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Joinning_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Joinning_Date__c</fullName>
    <description>shows the Joinning Date</description>
    <label>Joinning Date</label>
    <type>Date</type>
</CustomField>