force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Reporting_Date__c</fullName>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>