force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Requirement_Status__c</fullName>
    <description>represent the Requirement Status of manager</description>
    <label>Requirement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received( Draft )</fullName>
                <default>true</default>
                <label>Application Received( Draft )</label>
            </value>
            <value>
                <fullName>Application In Progress</fullName>
            </value>
            <value>
                <fullName>Application Completed</fullName>
            </value>
            <value>
                <fullName>Application Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>