force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_SQX_Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_SQX_Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is Lookup to Account</description>
    <label>Account Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <filterItems>
            <field>Account.compliancequest__Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Managers</relationshipLabel>
    <relationshipName>Managers</relationshipName>
    <type>Lookup</type>
</CustomField>