force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_SQX_Part_Family_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_SQX_Part_Family_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for the Lookup to Part Family</description>
    <label>Part Family Lookup</label>
    <referenceTo>compliancequest__SQX_Part_Family__c</referenceTo>
    <relationshipLabel>Managers</relationshipLabel>
    <relationshipName>Managers</relationshipName>
    <type>Lookup</type>
</CustomField>