force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_SQX_Part_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_SQX_Part_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field Represent the Lookup to Part</description>
    <label>Part Lookup</label>
    <referenceTo>compliancequest__SQX_Part__c</referenceTo>
    <relationshipLabel>Managers</relationshipLabel>
    <relationshipName>Managers</relationshipName>
    <type>Lookup</type>
</CustomField>