force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_Sd_SQX_User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>CQ_Sd_SQX_User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this is the Lookup to User</description>
    <label>UserLookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managers</relationshipName>
    <type>Lookup</type>
</CustomField>