force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Title__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Title__c</fullName>
    <description>Title for The Name</description>
    <label>Title</label>
    <length>15</length>
    <type>Text</type>
</CustomField>