force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Verification__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Verification__c</fullName>
    <label>Verification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>