force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/CQ_SD_Work_Shift__c.field-meta.xml
<CustomField>
    <fullName>CQ_SD_Work_Shift__c</fullName>
    <label>Work Shift</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>