force-app/main/default/objects/CQ_SD_SQX_Manager__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <label>CQ_SD_Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>