force-app/main/default/objects/CQ_SD_SQX_Manager__c/validationRules/Validate_Reporting_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Reporting_Date</fullName>
    <active>true</active>
    <errorConditionFormula>CQ_SD_Reporting_Date__c  &gt;=  CQ_SD_Joinning_Date__c</errorConditionFormula>
    <errorMessage>Reporting Date Cannot be Greater then Joinning Date</errorMessage>
</ValidationRule>