force-app/main/default/objects/CQ_SD_SQX_Manager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Verification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>